# doit-cellular-js-rust-diesel

./: .gitignore  README.md  Todos  Todos.md  insomnia.json
backend/app/: Cargo.toml
backend/app/src/: main.rs
backend/db/: Cargo.toml
backend/db/src/: connection.rs  lib.rs
backend/db/src/doit_task/delete_one/: model.rs  presenter.rs
backend/db/src/doit_task/insert_one/: model.rs  presenter.rs
backend/db/src/doit_task/read_all/: model.rs  presenter.rs
backend/db/src/doit_task/read_count/count/: mod.rs  model.rs
backend/db/src/doit_task/read_count/filter/: mod.rs
backend/db/src/doit_task/read_count/filter/all_done/: model.rs
backend/db/src/doit_task/read_count/filter/all_undone/: model.rs  presenter.rs
backend/db/src/doit_task/update_one/: model.rs  presenter.rs
backend/db/src/user/: mod.rs
backend/db/src/user/insert_one/: model.rs  presenter.rs
backend/db/src/user/read_count/: model.rs
backend/db/src/user/read_one/: model.rs  presenter.rs
backend/error_handling/: Cargo.toml
backend/error_handling/src/: lib.rs
backend/www/: Cargo.toml
backend/www/src/: lib.rs  run.rs
backend/www/src/auth/: model.rs  presenter.rs  view.rs
backend/www/src/doit_task/: mod.rs
backend/www/src/doit_task/delete_one/: model.rs  presenter.rs  view.rs
backend/www/src/doit_task/insert_one/: model.rs  presenter.rs
backend/www/src/doit_task/read_all/: model.rs  presenter.rs  view.rs
backend/www/src/doit_task/read_count/: mod.rs
backend/www/src/doit_task/read_count/count/: model.rs
backend/www/src/doit_task/update_one/: model.rs  presenter.rs
backend/www/src/user/: mod.rs
backend/www/src/user/insert_one/: model.rs  view.rs
backend/www/src/utilities/: mod.rs
backend/www/src/utilities/genpassword/: model.rs  presenter.rs  view.rs
(+117 files in other folders)
