[package]
name = "error_handling"
version = "0.1.0"
authors = ["JADSN <jadsn1894@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5" }
serde_json = { version = "1.0.59" }
tide = { version = "0.15.0" }

[dependencies.validator]
path = "../validator"